--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.7",
+    "google-maps-react": "^2.0.6",
     "lazysizes": "^5.3.2",
     "next": "14.2.3",
     "react": "^18",
