--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@react-google-maps/api": "^2.19.3",
     "@tailwindcss/forms": "^0.5.7",
-    "google-maps-react": "^2.0.6",
     "lazysizes": "^5.3.2",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-lazyload": "^3.2.1"
   },
   "devDependencies": {
