--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-lazyload": "^3.2.1"
+    "react-lazyload": "^3.2.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
