--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@react-google-maps/api": "^2.19.3",
     "@tailwindcss/forms": "^0.5.7",
+    "animate.css": "^4.1.1",
     "lazysizes": "^5.3.2",
     "next": "14.2.3",
     "react": "^18.3.1",
